<resources>
    <string name="app_name">IsWeatherGoodForAWalk</string>
    <string name="title_home">Home</string>
    <string name="title_hourly">Hourly</string>
    <string name="title_daily">Daily</string>

    <string name="hello_first_fragment">Is it going to rain for this walk?</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="location_permissions_snackbar">Getting Location Permissions.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_units">Select Units</string>
    <string name="temperature_title">Temperature:</string>
    <string name="feels_like_title">Feel\'s Like:</string>
    <string name="sunrise_title">Sunrise:</string>
    <string name="sunset_title">Sunset:</string>
    <string name="temperature_default_value">0 F</string>
    <string name="percent_cloudy_title">% cloudy:</string>
    <string name="percent_cloudy_default_value">0%</string>
    <string name="sunrise_default_value">6 am (-30 min)</string>
    <string name="sunset_default_value">6 pm (30 min)</string>

    <string name="homefrag_forecast_time_title">as of</string>
    <string name="homefrag_forecast_time_default_value">6 pm (30 min ago)</string>
    <string name="homefrag_chart_y_axis_label">Rain (mm)</string>
    <string name="homefrag_chart_x_axis_label">Minutes from now</string>
    <string name="homefrag_next_rain_title">Next Rain:</string>
    <string name="homefrag_next_rain_value">6 pm (in 30 min)</string>

    <string name="weather_card_temperature_title">Temperature / Feels Like:</string>
    <string name="weather_card_cloudy_title">% Cloudy:</string>
    <string name="weather_card_rain_title">, Rain:</string>
    <string name="weather_card_good_walk_title">Good Walk?:</string>
    <string name="weather_card_temperature_default_value">0F / 0F</string>
    <string name="weather_card_cloudy_default_value">0%</string>
    <string name="weather_card_rain_default_value">0mm</string>
    <string name="weather_card_good_walk_default_value">Yes</string>
    <string name="weather_card_description_default_value">Clear</string>

    <string name="progress_bar_fetching_data">Fetching Data...</string>
    <string name="content_description_weather_icon">Weather Icon</string>
    <string name="no_rain_chart_text">No Rain For the Next Hour!</string>
</resources>