<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.terickson87.isgoodweatherforawalk.ui.home.HomeFragment">

    <TextView
        android:id="@+id/homefrag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hello_first_fragment"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/homefrag_weatherdata_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/homefrag_chart_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homefrag_weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/homefrag_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_temperature_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_title" />

            <TextView
                android:id="@+id/homefrag_temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/temperature_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_feels_like_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feels_like_title" />

            <TextView
                android:id="@+id/homefrag_feels_like_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/temperature_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_percent_cloudy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_cloudy_title" />

            <TextView
                android:id="@+id/homefrag_percent_cloudy_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/percent_cloudy_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_sunrise_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise_title" />

            <TextView
                android:id="@+id/homefrag_sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sunrise_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_sunset_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset_title" />

            <TextView
                android:id="@+id/homefrag_sunset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sunset_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_next_rain_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homefrag_next_rain_title" />

            <TextView
                android:id="@+id/homefrag_next_rain_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/homefrag_next_rain_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homefrag_forcast_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homefrag_forecast_time_title"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/homefrag_forcast_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/homefrag_forecast_time_default_value"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/homefrag_weather_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/border_image"
        android:cropToPadding="true"
        android:elevation="3dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_mapmode"
        android:contentDescription="@string/content_description_weather_icon"
        app:layout_constraintBottom_toTopOf="@+id/homefrag_chart_holder"
        app:layout_constraintEnd_toStartOf="@id/homefrag_weatherdata_linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homefrag_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homefrag_chart_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homefrag_weatherdata_linearLayout"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/homefrag_minutely_rain_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/homefrag_chart_x_axis_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homefrag_chart_x_axis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homefrag_chart_x_axis_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/homefrag_chart_labelSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/homefrag_chart_no_rain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_rain_chart_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/homefrag_chart_labelSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>