<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.terickson87.isgoodweatherforawalk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hourly"
        android:name="io.github.terickson87.isgoodweatherforawalk.ui.hourly.HourlyFragment"
        android:label="@string/title_hourly"
        tools:layout="@layout/fragment_hourly" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="io.github.terickson87.isgoodweatherforawalk.ui.daily.DailyFragment"
        android:label="@string/title_daily"
        tools:layout="@layout/fragment_daily" />
</navigation>