<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/hourly_weather_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weather_card_height"
        app:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="@dimen/weather_card_corner_radius"
        app:cardElevation="@dimen/weather_card_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/hourly_weather_card_icon"
                android:layout_width="@dimen/weather_card_icon_width"
                android:layout_height="@dimen/weather_card_icon_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_description_weather_icon" />

            <LinearLayout
                android:id="@+id/hourly_weather_date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/hourly_weather_card_temperature_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hourly_weather_card_icon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/hourly_weather_card_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homefrag_forecast_time_default_value"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hourly_weather_card_temperature_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/hourly_weather_card_cloudy_rain_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hourly_weather_card_icon"
                app:layout_constraintTop_toBottomOf="@+id/hourly_weather_date_layout">

                <TextView
                    android:id="@+id/hourly_weather_card_temperature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_temperature_title" />

                <TextView
                    android:id="@+id/hourly_weather_card_temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_temperature_default_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hourly_weather_card_cloudy_rain_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/hourly_weather_card_good_walk_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hourly_weather_card_icon"
                app:layout_constraintTop_toBottomOf="@+id/hourly_weather_card_temperature_layout">

                <TextView
                    android:id="@+id/hourly_weather_card_cloudy_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_cloudy_title" />

                <TextView
                    android:id="@+id/hourly_weather_card_cloudy_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_cloudy_default_value" />

                <TextView
                    android:id="@+id/hourly_weather_card_rain_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_rain_title" />

                <TextView
                    android:id="@+id/hourly_weather_card_rain_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_rain_default_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hourly_weather_card_good_walk_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hourly_weather_card_icon"
                app:layout_constraintTop_toBottomOf="@+id/hourly_weather_card_cloudy_rain_layout">

                <TextView
                    android:id="@+id/hourly_weather_card_description_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_description_default_value" />

                <TextView
                    android:id="@+id/hourly_weather_card_good_walk_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_good_walk_title" />

                <TextView
                    android:id="@+id/hourly_weather_card_good_walk_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@android:color/black"
                    android:text="@string/weather_card_good_walk_default_value" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>